// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature/> rendres the <Feature /> with a bunny video 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 dUyrwq"
>
  <h2
    class="feature__Title-sc-6swrp6-1 jiOEhx"
  >
    Unlimited films, TV programmes and more.
  </h2>
  <h3
    class="feature__SubTitle-sc-6swrp6-2 dQnJQV"
  >
    Watch anywhere. Cancel at any time.
  </h3>
</div>
`;

exports[`<Feature/> rendres the <Feature /> with only subtitle 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 dUyrwq"
>
  <h3
    class="feature__SubTitle-sc-6swrp6-2 dQnJQV"
  >
    Watch anywhere. Cancel at any time.
  </h3>
</div>
`;

exports[`<Feature/> rendres the <Feature /> with only title 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 dUyrwq"
>
  <h2
    class="feature__Title-sc-6swrp6-1 jiOEhx"
  >
    Unlimited films, TV programmes and more.
  </h2>
</div>
`;

exports[`<Feature/> rendres the <Feature /> with populated Data 1`] = `
<div
  class="feature__Container-sc-6swrp6-0 dUyrwq"
>
  <h2
    class="feature__Title-sc-6swrp6-1 jiOEhx"
  >
    Unlimited films, TV programmes and more.
  </h2>
  <h3
    class="feature__SubTitle-sc-6swrp6-2 dQnJQV"
  >
    Watch anywhere. Cancel at any time.
  </h3>
</div>
`;
